# relief

./: Cargo.toml
notes/: data.dir  gitleaks.toml
src/: config.rs  main.rs
src/cli/: args.rs  list.rs  mod.rs  pick.rs
src/config/: app.rs  package.rs
src/model/: ghapi.rs  mod.rs
test/: gitleaks.toml
