[package]
name = "prj_relief"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "4.5", features = ["derive"] }
# Logging
log = "0.4"
simplelog = "0.12"
# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# Http
ureq = { version = "2.9", features = ["json"] }
anyhow = "1.0.82"
