[package]
name = "relief"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
# Logging
log = "0.4"
simplelog = "0.12"
# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# HTTP
ureq = { version = "2.9", features = ["json"] }
# Error Handle
anyhow = "1.0"
thiserror = "1.0"
# Terminal
inquire = "0.7"
owo-colors = "4.0"
# Config
directories = "5.0"
# Quality of life
derive_more = { version = "0.99", default-features = false, features = [
    "display",
] }
